// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": 5,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 11,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile n medium 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": 5,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "lineHeight": 18,
          "marginBottom": 11,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile n small 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": 5,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "lineHeight": 18,
          "marginBottom": 11,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile n wide 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": 5,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 11,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile n with default star 1`] = `
<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": 5,
      "paddingHorizontal": 12,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "lineHeight": 18,
          "marginBottom": 11,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;
